feat(build): 接入华为规范 Spotless + Checkstyle 工具链（两 Java 模块） (#23)
* docs: 扩展为 Spotless + Checkstyle 完整华为规范方案

按公司《华为 Java 编程规范》大纲补全命名/注释/格式/声明四维度的
条款→检查项映射；Spotless 自动修排版，Checkstyle 检测语义规则。

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* docs: add Java 华为规范 Spotless+Checkstyle 实施计划

四个任务:Spotless 接入两模块、Checkstyle 规则集、Checkstyle 接入、使用文档。

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* feat(build): 接入 Spotless 华为风格自动格式化(两模块)

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* docs: 对齐 spotless 标签 trailingWhitespace->trimTrailingWhitespace

实现期发现 trailingWhitespace 在 spotless-maven-plugin 2.43.0 非法,
正确标签为 trimTrailingWhitespace;同步修正 plan 与 spec。

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* feat(build): 新增华为规范 Checkstyle 规则集与抑制文件

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* feat(build): 接入 maven-checkstyle-plugin 引用华为规则集(两模块)

两模块 <build><plugins> 追加完全相同的 maven-checkstyle-plugin 3.6.0 块,
引用 config/checkstyle/huawei_checks.xml。

修正 huawei_checks.xml 的 SuppressionFilter:${config_loc} 是 Eclipse-CS
专有变量,plain mvn checkstyle:check 不会注入,导致 "Property '${config_loc}'
has not been set" 配置加载失败。改用插件原生机制 suppressionsLocation +
suppressionsFileExpression=checkstyle.suppressions.file,property 加
default="" 兜底。

两模块均已用 -Dcheckstyle.violationSeverity=warning 临时打开
failOnViolation 验证规则集真实生效(命名/Javadoc/NeedBraces 等违规可见),
默认 failOnViolation=false 配置下 BUILD SUCCESS 且生成
target/checkstyle-result.xml。

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* docs: 对齐 checkstyle 抑制文件接线为 suppressionsLocation 机制

实现期发现 ${config_loc} 仅 Eclipse-CS 注入、Maven CLI 下不可用;
改用 maven-checkstyle-plugin 原生 suppressionsLocation +
suppressionsFileExpression(${checkstyle.suppressions.file});同步修正 plan 与 spec。

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* docs: 补充 Java 华为规范 Spotless/Checkstyle 使用说明

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* fix(checkstyle): SuppressionFilter 移除 default="" 避免空属性崩溃

default="" 会让 checkstyle.su